@@ -1,3 +1,8 @@
+2019-11-09         Alexey Pawlow        <alexey.pawlow@gmail.com>
+
+	* Makefile.am (mbprintf5): Add check for MSYS.
+	(readdir_retest): Ditto.
+
 2019-11-03         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DISTS): New test, fpat7.
