@@ -1,3 +1,7 @@
+2019-11-09         Alexey Pawlow        <alexey.pawlow@gmail.com>
+
+	* threadlib.m4: Add check for MSYS.
+
 2019-09-10  Florian Weimer  <fweimer@redhat.com>
 
 	* readline.m4 (GAWK_CHECK_READLINE): Include <fcntl.h>, <unistd.h>
